--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <!-- Header -->
     <header class="bg-slate-800 text-white p-4 shadow-md flex justify-between items-center shrink-0">
         <div>
-            <h1 class="text-xl font-bold">Thin-Walled Stiffened Beam (Unit 3)</h1>
-            <p class="text-sm text-slate-300">Schubfluss & Axialkräfte in Einzellern & offenen Profilen</p>
+            <h1 class="text-xl font-bold">Thin-Walled Stiffened Beam - Calculator & Visulizer</h1>
+            <p class="text-sm text-slate-300">Open and Closed Crossections</p>
         </div>
         <div class="text-right text-xs text-slate-400">
             <p>Rot = Zug (+), Blau = Druck (-)</p>
@@ -220,7 +220,7 @@
                         <div class="flex justify-between"><span>z_s:</span> <span id="resZs" class="result-val">0</span> <span class="text-gray-400">mm</span></div>
                     </div>
                     <div class="space-y-1">
-                        <p class="font-semibold text-gray-500 uppercase text-xs tracking-wider">Lastsituation</p>
+                        <p class="font-semibold text-gray-500 uppercase text-xs tracking-wider">Resultierendes Torsionsmoment</p>
                         <div class="flex justify-between"><span>dy (F zu SC):</span> <span id="resDy" class="result-val">0</span> <span class="text-gray-400">mm</span></div>
                         <div class="flex justify-between"><span>dz (F zu SC):</span> <span id="resDz" class="result-val">0</span> <span class="text-gray-400">mm</span></div>
                         <div class="flex justify-between"><span>Torsion (Gesamt):</span> <span id="resTors" class="result-val">0</span> <span class="text-gray-400">Nm</span></div>
@@ -949,3 +949,4 @@
     </script>
 </body>
 </html>
+
